# torch-vector-search

./: .gitignore  README.md  pyproject.toml
docs/: FUTURE-INTEGRATION.md
src/torch_vector_search/: __init__.py  embedders.py  index.py
tests/: test_index.py
